# ood

./: .gitignore  package-lock.json  package.json  tsconfig.json
lab1/Duck/: README.md
lab1/FunDuck/: README.md  webpack.config.js
lab1/Shapes/: README.md  package.json  tsconfig.json
lab3/ex1/: package-lock.json  package.json  tsconfig.json
lab3/ex2/: package-lock.json  package.json
lw2/WeatherStation/: README.md
lw2/WeatherStationDuoPro/: webpack.config.js
lw3/: CMakeLists.txt  main.cpp
lw3/src/: Beverages.h  Condiments.h  IBeverage.h
lw4/: tsconfig.json
lw4/src/: Color.ts  main.ts
lw5/: README.md
lw5/coverage/: clover.xml  coverage-final.json  lcov.info
lw5/src/: GraphicsLib.ts  ModernGraphicsLib.ts  ModernGraphicsToOldGraphicsAdapter.ts  Point.ts  ShapeDrawingLib.ts  main.ts
lw5/test/: Adapter.test.ts
lw5_true/: README.md  jest.config.js  package.json
lw5_true/coverage/: clover.xml  coverage-final.json  lcov.info
lw5_true/src/: CommandHistory.ts  DeleteItemCommand.ts  Document.ts  DocumentCommand.ts  DocumentItem.ts  HtmlGenerator.ts  IDocument.ts  IImage.ts  IParagraph.ts  Image.ts  Paragraph.ts  utils.ts
lw5_true/test/: CommandHistory.test.ts
lw6_class/coverage/: clover.xml  coverage-final.json  lcov.info
lw6_class/src/: GraphicsLib.ts  ModernGraphicsLib.ts  ModernGraphicsToOldGraphicsAdapter.ts  ShapeDrawingLib.ts  main.ts
lw9/: README.md  run.bat
lw9_c/: CMakeLists.txt  main.cpp
lw9_c/src/: CMakeLists.txt  cow.h  drawer.cpp  drawer.h  image.cpp  image.h  tile.h
lw9_c/test/: CMakeLists.txt  ImageTest.cpp
(+241 files in other folders)
